--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ repository = "https://github.com/glazari/jaust"
 
 [dependencies]
 anyhow = "1.0.86"
+clap = { version = "4.5.17", features = ["derive"] }
